user fonctionnel mise a part modification

--- a/Solary_Gestionnaire/App.xaml
+++ b/Solary_Gestionnaire/App.xaml
@@ -185,9 +185,10 @@
 
         <!-- Style pour les ComboBox -->
         <Style x:Key="ModernComboBox" TargetType="ComboBox">
-            <Setter Property="Background" Value="{StaticResource SecondaryBrush}"/>
-            <Setter Property="Foreground" Value="{StaticResource WhiteBrush}"/>
-            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="#1E1E2F"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="#6A6A8A"/>
+            <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="Padding" Value="10,8"/>
             <Setter Property="Margin" Value="5"/>
         </Style>
